tests/errors/bad_equ2.asm
FUNC LABEL 0
    MOV STK A VAL 10
    REF STK B STK A
    EQU PTR B
    RET
